--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/yogs0ddhoth/Employee-FINDME#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.0",
     "inquirer": "^8.2.1",
     "mysql2": "^2.3.3"
   }
